refactor: Clean code for day 1